Update version & split flake.nix in files & rename default plugin name